After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 720764 - GdTaggedEntryTag: Fix close button states
GdTaggedEntryTag: Fix close button states
Status: RESOLVED FIXED
Product: libgd
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: libgd maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-12-19 19:29 UTC by Volker Sobek (weld)
Modified: 2013-12-19 22:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GdTaggedEntryTag: Fix close button states (1.55 KB, patch)
2013-12-19 19:29 UTC, Volker Sobek (weld)
none Details | Review
GdTaggedEntryTag: Fix close button states (1.56 KB, patch)
2013-12-19 19:32 UTC, Volker Sobek (weld)
committed Details | Review

Description Volker Sobek (weld) 2013-12-19 19:29:28 UTC
When clicking on a tag's close button, the close buttons of all tags
where drawn with the active state (well, except the button you
actually clicked on, which kept showing the hover state), because
of a wrong if-clause and setting two states at the same time.

I'm not sure if it is necessary to avoid setting GTK_STATE_FLAG_ACTIVE
and GTK_STATE_FLAG_PRELIGHT at the same time on the tag buttons, I
guess ACTIVE should take precedence here, but I'll leave that to the
CSS experts to figure out.
Comment 1 Volker Sobek (weld) 2013-12-19 19:29:30 UTC
Created attachment 264564 [details] [review]
GdTaggedEntryTag: Fix close button states
Comment 2 Volker Sobek (weld) 2013-12-19 19:32:55 UTC
Created attachment 264565 [details] [review]
GdTaggedEntryTag: Fix close button states

When clicking on a tag's close button, the close buttons of all tags
where drawn with the active state (well, except the button you
actually clicked on, which kept showing the hover state), because
of a wrong if-clause and setting two states at the same time.

I'm not sure if it is necessary to avoid setting GTK_STATE_FLAG_ACTIVE
and GTK_STATE_FLAG_PRELIGHT at the same time on the tag buttons, I
guess ACTIVE should take precedence here, but I'll leave that to the
CSS experts to figure out.
Comment 3 Volker Sobek (weld) 2013-12-19 22:53:58 UTC
Attachment 264565 [details] pushed as 0a9a80e - GdTaggedEntryTag: Fix close button states